adm-kub/kuber-homeworks/2.3/data/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task1
  labels:
    nginx: multitool
  namespace: ns1
spec:
  selector:
    matchLabels:
      nginx: multitool
  template:
    metadata:
      labels:
        nginx: multitool
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        volumeMounts:
        - name: configmap-volume
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
      - name: multitool
        image: wbitt/network-multitool:alpine-extra
        ports:
        - containerPort: 8080
      volumes:
      - name: configmap-volume
        configMap:
          name: configmap1
