adm-kub/kuber-homeworks/2.3/data/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: task1
  namespace: ns1
spec:
  selector:
    nginx: multitool
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80
  - name: multitool
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
