adm-kub/kuber-homeworks/2.3/data/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ns2
spec:
  selector:
    app: nginx
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
