adm-kub/kuber-homeworks/2.3/data/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ns2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - netology.local
      secretName: secret2
  rules:
  - host: netology.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              name: nginx
